--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ openai==1.25.1
 packaging==24.0
 pip-upgrader==1.4.15
 playsound==1.3.0
+PyAudio==0.2.14
 pydantic==2.7.1
 pydantic_core==2.18.2
 pynput==1.7.6
